--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -5,7 +5,7 @@
 	display: flex;
 	overflow: hidden;
 	flex-flow: column;
-	background-color: var(#{scheme-variables.$vvd-color-base});
+	background-color: var(#{scheme-variables.$vvd-color-canvas});
 	border-radius: 6px;
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.05), 0 8px 8px rgba(0, 0, 0, 0.05), 0 2px 16px rgba(0, 0, 0, 0.1);
 	color: var(#{scheme-variables.$vvd-color-on-base});
