--- a/components/button/src/_vwc-button-variables.scss
+++ b/components/button/src/_vwc-button-variables.scss
@@ -1,5 +1,4 @@
 $button-icon-size-variable-name: --vvd-button-icon-size;
-$vvd-button-background-color: --vvd-button-background-color;
-$vvd-button-color: --vvd-button-color;
 $vvd-button-shape: --vvd-button-shape;
+$vvd-button-layout: --vvd-button-layout;
 
