--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -32,6 +32,8 @@
 	display: flex;
 	align-items: center;
 	padding: 16px;
+	border: 0 none;
+	background: transparent;
 	cursor: pointer;
 
 	.leading-icon,
