--- a/components/chip/src/vwc-chip.scss
+++ b/components/chip/src/vwc-chip.scss
@@ -1,111 +1,109 @@
-$namespace: vvd-chip;
+$namespace: --vvd-chip;
+$namespace-layout: #{$namespace}-layout;
+$namespace-shape: #{$namespace}-shape;
 
+@use '@vonage/vwc-icon/src/partials/vwc-icon-variables' as icon-variables;
+@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
+@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
+	$connotations-set: primary cta
+);
 
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
-	$variable-name: --#{$namespace}-shape
+	$variable-name: #{$namespace-shape}
 );
+@use '@vonage/vvd-foundation/scss/mixins/layout-mixins' as layout-mixins with (
+	$layouts: outlined soft,
+	$variable-prefix: #{$namespace-layout}
+);
+
+$vvd-chip--block-size: --#{$namespace}--block-size;
+
+@include color-connotation.connotations-shades;
+@include color-connotation.connotations-shades-default(primary);
+@include color-connotation.connotations-main;
+@include color-connotation.connotations-main-default(primary);
 
 @include shape-mixins.shape(
 	$shapes: (
-		rounded: 6px,
-		pill: 24px
+		rounded: 4px,
+		pill: 14px,
 	),
-	$default: rounded
+	$default: pill
 );
 
-// Base
-:host {
-	> div {
-		@include typography.typography-cat-shorthand(body-2-bold);
-		@include typography.typography-set-variables(body-2-bold);
-		display: inline-flex;
-		box-sizing: border-box;
-		flex-wrap: nowrap;
-		align-items: center;
-		padding: 2px 4px;
-		//background-color: var(--vvd-color-connotation-soft);
-		border-radius: var(--vvd-chip-shape);
-		color: var(--vvd-color-neutral-90, #333);
+@include layout-mixins.layout();
+@include layout-mixins.layout-default(soft);
 
-		cursor: pointer;
-
-		> span {
-			flex: 1 0;
-			padding: 0;
-			margin: 0 6px;
-		}
-
-		.icon {
-			--icon-size: calc(var(--vvd-typography-line-height) - 4px);
-			flex: 0 0 auto;
-		}
-	}
-}
-
-// Layouts
-:host([layout="outlined"i]) {
-	> div {
-		border-width: 1px;
-		border-style: solid;
-		border-color: var(--vvd-color-on-connotation-soft);
-		background-color: var(--vvd-color-base, #fff);
-		&:hover {
-			background-color: var(--vvd-color-neutral-20, #ccc);
-		}
-	}
-}
-
-:host([enlarged]) {
-	> div {
-		@include typography.typography-cat-shorthand(body-1-bold);
-		@include typography.typography-set-variables(body-1-bold);
-		> span {
-			flex: 1 0;
-			padding: 0;
-			margin: 0 8px;
-		}
-	}
+:host(:not([dense]):not([enlarged])) {
+	@include typography.typography-cat-shorthand('body-2-bold');
+	#{$vvd-chip--block-size}: 24px;
 }
 
 :host([dense]) {
-	> div {
-		@include typography.typography-cat-shorthand(caption-bold);
-		@include typography.typography-set-variables(caption-bold);
-		> span {
-			flex: 1 0;
-			padding: 0;
-			margin: 0 4px;
-		}
+	@include typography.typography-cat-shorthand('caption-bold');
+	#{$vvd-chip--block-size}: 20px;
+}
+
+:host([enlarged]) {
+	@include typography.typography-cat-shorthand('body-1-bold');
+	#{$vvd-chip--block-size}: 28px;
+}
+
+.vwc-chip {
+	display: inline-flex;
+	align-items: center;
+	border: var(#{$namespace-layout}--outline);
+	background-color: rgb(107, 65, 65);
+	border-radius: var(#{$namespace-shape});
+	color: var(#{$namespace-layout}--text);
+	line-height: var(#{$vvd-chip--block-size});
+
+	&:active {
+		background-color: var(#{$namespace-layout}--fill);
+	}
+	&.chip--selected {
+		background-color: var(#{$namespace-layout}--fill);
+	}
+
+	:host(:not([dense]):not([enlarged])) & {
+		padding: 0 10px;
+	}
+	:host([dense]) & {
+		padding: 0 8px;
+	}
+
+	:host([enlarged]) & {
+		padding: 0 12px;
 	}
 }
 
-:host([layout='filled']),
-:host(:not([layout])) {
-	> div {
-		background-color: var(--vvd-color-neutral-20, #e6e6e6);
-		&:hover {
-			background-color: var(--vvd-color-neutral-30, #ccc);
-		}
+.icon {
+	$margin: 8px;
+
+	&.icon--leading {
+		margin-inline-end: $margin;
+	}
+	&.icon--trailing {
+		margin-inline-start: $margin;
+	}
+
+	:host(:not([dense]):not([enlarged])) & {
+		#{icon-variables.$icon-size-variable-name}: 16px;
+	}
+	:host([dense]) & {
+		#{icon-variables.$icon-size-variable-name}: 12px;
+	}
+	:host([enlarged]) & {
+		#{icon-variables.$icon-size-variable-name}: 20px;
 	}
 }
 
-:host([selected]) {
-	> div {
-		background-color: var(--vvd-color-neutral-40, #b3b3b3);
-		&:hover {
-			background-color: var(--vvd-color-neutral-40, #b3b3b3);
-		}
-	}
-}
+// disable connotation if not selected
+// .vwc-chip:not(.chip--selected) {
+// 	:host([connotation="cta"i]) & {
+// 		--vvd-color-connotation: unset;
+// 		--vvd-color-on-connotation: unset;
+// 	}
+// }
 
-:host([connotation="cta"i][selected]) {
-	> div {
-		background-color: var(--vvd-color-cta-20, #ece2fa);
-		color: var(--vvd-color-cta-90, #440291);
-
-		&:hover {
-			background-color: var(--vvd-color-cta-20, #ece2fa);
-		}
-	}
-}
