--- a/components/chip/src/vwc-chip.scss
+++ b/components/chip/src/vwc-chip.scss
@@ -2,7 +2,9 @@ $namespace: --vvd-chip;
 $namespace-layout: #{$namespace}--layout;
 $namespace-shape: #{$namespace}--shape;
 $namespace-block-size: #{$namespace}--block-size;
-$namespace-icon-size: #{$namespace}__icon--size;
+$namespace-padding-inline: #{$namespace}--padding-inline;
+$namespace-icon-checkmark--size: #{$namespace}__icon-checkmark--size;
+$namespace-icon-checkmark--padding-inline-end: #{$namespace}__icon-checkmark--padding-inline-end;
 
 @use '@vonage/vwc-icon/src/partials/vwc-icon-variables' as icon-variables;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
@@ -36,33 +38,16 @@ $namespace-icon-size: #{$namespace}__icon--size;
 @include layout-mixins.layout();
 @include layout-mixins.layout-default(soft);
 
-:host(:not([dense]):not([enlarged])) {
-	@include typography.typography-cat-shorthand('body-2-bold');
-	#{$namespace-block-size}: 24px;
-	#{$namespace-icon-size}: 16px;
-}
-
-:host([dense]) {
-	@include typography.typography-cat-shorthand('caption-bold');
-	#{$namespace-block-size}: 20px;
-	#{$namespace-icon-size}: 12px;
-}
-
-:host([enlarged]) {
-	@include typography.typography-cat-shorthand('body-1-bold');
-	#{$namespace-block-size}: 28px;
-	#{$namespace-icon-size}: 20px;
-}
 
 .vwc-chip {
 	display: inline-flex;
 	align-items: center;
+	padding: 0 var(#{$namespace-padding-inline});
 	border: var(#{$namespace-layout}--outline);
 	background-color: var(#{$namespace-layout}--fill);
+	block-size: var(#{$namespace-block-size});
 	border-radius: var(#{$namespace-shape});
 	color: var(#{$namespace-layout}--text);
-	line-height: var(#{$namespace-block-size});
-
 	// &:active {
 	// }
 	:host([layout="outlined"i]) & {
@@ -81,20 +66,33 @@ $namespace-icon-size: #{$namespace}__icon--size;
 	}
 
 	:host(:not([dense]):not([enlarged])) & {
-		padding: 0 10px;
+		@include typography.typography-cat-shorthand('body-2-bold');
+		#{$namespace-padding-inline}: 10px;
+		#{$namespace-icon-checkmark--padding-inline-end}: 6px;
+		#{$namespace-block-size}: 24px;
+		#{$namespace-icon-checkmark--size}: 16px;
 	}
+	
 	:host([dense]) & {
-		padding: 0 8px;
+		@include typography.typography-cat-shorthand('caption-bold');
+		#{$namespace-padding-inline}: 8px;
+		#{$namespace-icon-checkmark--padding-inline-end}: 4px;
+		#{$namespace-block-size}: 20px;
+		#{$namespace-icon-checkmark--size}: 12px;
 	}
-
+	
 	:host([enlarged]) & {
-		padding: 0 12px;
+		@include typography.typography-cat-shorthand('body-1-bold');
+		#{$namespace-padding-inline}: 12px;
+		#{$namespace-icon-checkmark--padding-inline-end}: 8px;
+		#{$namespace-block-size}: 28px;
+		#{$namespace-icon-checkmark--size}: 20px;
 	}
 }
 
 .icon {
 	$margin: 8px;
-	#{icon-variables.$icon-size-variable-name}: var(#{$namespace-icon-size});
+	#{icon-variables.$icon-size-variable-name}: var(#{$namespace-icon-checkmark--size});
 
 	&.icon--leading {
 		margin-inline-end: $margin;
@@ -105,15 +103,29 @@ $namespace-icon-size: #{$namespace}__icon--size;
 }
 
 .vwc-chip__checkmark {
-	overflow: hidden;
-	block-size: var(#{$namespace-icon-size});
-	inline-size: var(#{$namespace-icon-size});
+	block-size: var(#{$namespace-icon-checkmark--size});
+	margin-inline-end: 0;
+	margin-inline-start: 0;
 	@media (prefers-reduced-motion: no-preference) {
-		transition: inline-size 0.2s;
+		transition-duration: 0.2s;
+		transition-property: margin-inline-start, margin-inline-end;
 	}
-	.vwc-chip:not(.vwc-chip--selected) & {
-		display: none;
-		inline-size: 0;
+	.vwc-chip.vwc-chip--selected & {
+		margin-inline-end: var(#{$namespace-icon-checkmark--padding-inline-end});
+		margin-inline-start: calc(4px - var(#{$namespace-padding-inline}));
+	}
+	
+	> .vwc-chip__icon {
+		block-size: var(#{$namespace-icon-checkmark--size});
+		inline-size: var(#{$namespace-icon-checkmark--size});
+		line-height: unset;
+		@media (prefers-reduced-motion: no-preference) {
+			transition: inline-size 0.2s;
+		}
+
+		.vwc-chip:not(.vwc-chip--selected) & {
+			inline-size: 0;
+		}
 	}
 }
 
