--- a/components/chip/src/vwc-chip.scss
+++ b/components/chip/src/vwc-chip.scss
@@ -1,11 +1,4 @@
-$namespace: --vvd-chip;
-$namespace-layout: #{$namespace}--layout;
-$namespace-shape: #{$namespace}--shape;
-$namespace-block-size: #{$namespace}--block-size;
-$namespace-padding-inline: #{$namespace}--padding-inline;
-$namespace-icon-checkmark--size: #{$namespace}__icon-checkmark--size;
-$namespace-icon-checkmark--padding-inline-end: #{$namespace}__icon-checkmark--padding-inline-end;
-
+@use 'partials/vwc-chip-variables' as chip-variables;
 @use '@vonage/vwc-icon/src/partials/vwc-icon-variables' as icon-variables;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
@@ -14,11 +7,11 @@ $namespace-icon-checkmark--padding-inline-end: #{$namespace}__icon-checkmark--pa
 );
 
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
-	$variable-name: #{$namespace-shape}
+	$variable-name: #{chip-variables.$namespace-shape}
 );
 @use '@vonage/vvd-foundation/scss/mixins/layout-mixins' as layout-mixins with (
 	$layouts: outlined soft,
-	$variable-prefix: #{$namespace-layout}
+	$variable-prefix: #{chip-variables.$namespace-layout}
 );
 
 
@@ -42,57 +35,59 @@ $namespace-icon-checkmark--padding-inline-end: #{$namespace}__icon-checkmark--pa
 .vwc-chip {
 	display: inline-flex;
 	align-items: center;
-	padding: 0 var(#{$namespace-padding-inline});
-	border: var(#{$namespace-layout}--outline);
-	background-color: var(#{$namespace-layout}--fill);
-	block-size: var(#{$namespace-block-size});
-	border-radius: var(#{$namespace-shape});
-	color: var(#{$namespace-layout}--text);
+	padding: 0 var(#{chip-variables.$namespace-padding-inline});
+	border: var(#{chip-variables.$namespace-layout}--outline);
+	background-color: var(#{chip-variables.$namespace-layout}--fill);
+	block-size: var(#{chip-variables.$namespace-block-size});
+	border-radius: var(#{chip-variables.$namespace-shape});
+	color: var(#{chip-variables.$namespace-layout}--text);
+
+	&.vwc-chip-button {
+		cursor: pointer;
+	}
 	// &:active {
 	// }
 	:host([layout="outlined"i]) & {
-		#{$namespace-layout}--outline: 1px solid var(#{scheme-variables.$vvd-color-neutral-50});
+		#{chip-variables.$namespace-layout}--outline: 1px solid var(#{scheme-variables.$vvd-color-neutral-50});
 	}
 
-	&:not(.vwc-chip--selected) {
-		#{$namespace-layout}--text: var(#{scheme-variables.$vvd-color-neutral-90});
+	// &:not(.vwc-chip--selected) {
+	// 	#{chip-variables.$namespace-layout}--text: var(#{scheme-variables.$vvd-color-neutral-90});
 
-		:host(:not([layout])) &,
-		:host([layout="soft"i]) & {
-			#{$namespace-layout}--fill: var(#{scheme-variables.$vvd-color-neutral-20});
-		}
-
-
-	}
+	// 	:host(:not([layout])) &,
+	// 	:host([layout="soft"i]) & {
+	// 		#{chip-variables.$namespace-layout}--fill: var(#{scheme-variables.$vvd-color-neutral-20});
+	// 	}
+	// }
 
 	:host(:not([dense]):not([enlarged])) & {
 		@include typography.typography-cat-shorthand('body-2-bold');
-		#{$namespace-padding-inline}: 10px;
-		#{$namespace-icon-checkmark--padding-inline-end}: 6px;
-		#{$namespace-block-size}: 24px;
-		#{$namespace-icon-checkmark--size}: 16px;
+		#{chip-variables.$namespace-padding-inline}: 10px;
+		#{chip-variables.$namespace-icon-checkmark--padding-inline-end}: 6px;
+		#{chip-variables.$namespace-block-size}: 24px;
+		#{chip-variables.$namespace-icon-checkmark--size}: 16px;
 	}
 	
 	:host([dense]) & {
 		@include typography.typography-cat-shorthand('caption-bold');
-		#{$namespace-padding-inline}: 8px;
-		#{$namespace-icon-checkmark--padding-inline-end}: 4px;
-		#{$namespace-block-size}: 20px;
-		#{$namespace-icon-checkmark--size}: 12px;
+		#{chip-variables.$namespace-padding-inline}: 8px;
+		#{chip-variables.$namespace-icon-checkmark--padding-inline-end}: 4px;
+		#{chip-variables.$namespace-block-size}: 20px;
+		#{chip-variables.$namespace-icon-checkmark--size}: 12px;
 	}
 	
 	:host([enlarged]) & {
 		@include typography.typography-cat-shorthand('body-1-bold');
-		#{$namespace-padding-inline}: 12px;
-		#{$namespace-icon-checkmark--padding-inline-end}: 8px;
-		#{$namespace-block-size}: 28px;
-		#{$namespace-icon-checkmark--size}: 20px;
+		#{chip-variables.$namespace-padding-inline}: 12px;
+		#{chip-variables.$namespace-icon-checkmark--padding-inline-end}: 8px;
+		#{chip-variables.$namespace-block-size}: 28px;
+		#{chip-variables.$namespace-icon-checkmark--size}: 20px;
 	}
 }
 
 .icon {
 	$margin: 8px;
-	#{icon-variables.$icon-size-variable-name}: var(#{$namespace-icon-checkmark--size});
+	#{icon-variables.$icon-size-variable-name}: var(#{chip-variables.$namespace-icon-checkmark--size});
 
 	&.icon--leading {
 		margin-inline-end: $margin;
@@ -103,7 +98,7 @@ $namespace-icon-checkmark--padding-inline-end: #{$namespace}__icon-checkmark--pa
 }
 
 .vwc-chip__checkmark {
-	block-size: var(#{$namespace-icon-checkmark--size});
+	block-size: var(#{chip-variables.$namespace-icon-checkmark--size});
 	margin-inline-end: 0;
 	margin-inline-start: 0;
 	@media (prefers-reduced-motion: no-preference) {
@@ -111,13 +106,14 @@ $namespace-icon-checkmark--padding-inline-end: #{$namespace}__icon-checkmark--pa
 		transition-property: margin-inline-start, margin-inline-end;
 	}
 	.vwc-chip.vwc-chip--selected & {
-		margin-inline-end: var(#{$namespace-icon-checkmark--padding-inline-end});
-		margin-inline-start: calc(4px - var(#{$namespace-padding-inline}));
+		margin-inline-end: var(#{chip-variables.$namespace-icon-checkmark--padding-inline-end});
+		margin-inline-start: calc(4px - var(#{chip-variables.$namespace-padding-inline}));
 	}
 	
 	> .vwc-chip__icon {
-		block-size: var(#{$namespace-icon-checkmark--size});
-		inline-size: var(#{$namespace-icon-checkmark--size});
+		display: block;
+		block-size: var(#{chip-variables.$namespace-icon-checkmark--size});
+		inline-size: var(#{chip-variables.$namespace-icon-checkmark--size});
 		line-height: unset;
 		@media (prefers-reduced-motion: no-preference) {
 			transition: inline-size 0.2s;
