--- a/components/badge/src/vwc-badge.scss
+++ b/components/badge/src/vwc-badge.scss
@@ -13,7 +13,7 @@ $namespace-shape: #{$namespace}-shape;
 	$variable-name: #{$namespace-shape}
 );
 @use '@vonage/vvd-foundation/scss/mixins/layout-mixins' as layout-mixins with (
-	$layouts: filled	outlined	soft,
+	$layouts: filled outlined-duotone soft,
 	$variable-prefix: #{$namespace-layout}
 );
 
