--- a/common/foundation/scss/mixins/color-connotation/_color-connotation-main.mixin.scss
+++ b/common/foundation/scss/mixins/color-connotation/_color-connotation-main.mixin.scss
@@ -1,4 +1,3 @@
-@use 'sass:selector';
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '../../functions';
 @use 'predefined-connotations';
@@ -33,14 +32,16 @@ $on-connotation-variable: #{variables.$vvd-on-color-connotation} !default;
 }
 
 @mixin connotations-main-default($name) {
+	$compound: '';
+
 	@each $connotation in functions.pick-list($connotations-set, $_connotations-definition) {
 		@if $name != $connotation {
-			$compound: ':not([connotation="#{$connotation}"i])';
-		
-			#{functions.get-local-selector($selector, variables.$compound-placeholder, $compound)} {
-				@include connotation-main-variables($name);
-			}
-		}
+			$compound: $compound + ':not([connotation="#{$connotation}"i])';
+		}		
+	}
+
+	#{functions.get-local-selector($selector, variables.$compound-placeholder, $compound)} {
+		@include connotation-main-variables($name);
 	}
 }
 
