--- a/common/foundation/scss/mixins/color-connotation/_color-connotation-shades.mixin.scss
+++ b/common/foundation/scss/mixins/color-connotation/_color-connotation-shades.mixin.scss
@@ -1,4 +1,3 @@
-@use 'sass:selector';
 @use 'sass:map';
 @use '../../functions';
 @use 'predefined-connotations';
@@ -37,13 +36,15 @@ $connotation-variable: #{variables.$vvd-color-connotation} !default;
 }
 
 @mixin connotations-shades-default($name) {
+	$compound: '';
+
 	@each $connotation, $_ in functions.pick-map($connotations-set, $_connotations-definition) {
 		@if $name != $connotation {
-			$compound: ':not([connotation="#{$connotation}"i])';
-		
-			#{functions.get-local-selector($selector, variables.$compound-placeholder, $compound)} {
-				@include parse-connotation-shades(map.get($_connotations-definition, $name));
-			}
+			$compound: $compound + ':not([connotation="#{$connotation}"i])';
 		}
+	}
+
+	#{functions.get-local-selector($selector, variables.$compound-placeholder, $compound)} {
+		@include parse-connotation-shades(map.get($_connotations-definition, $name));
 	}
 }
