--- a/common/foundation/scss/mixins/color-connotation/_color-connotation-shades.mixin.scss
+++ b/common/foundation/scss/mixins/color-connotation/_color-connotation-shades.mixin.scss
@@ -1,16 +1,19 @@
 @use 'sass:map';
+
+@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '../../functions';
 @use 'predefined-connotations';
 @use 'variables';
 
 $_connotations-definition: (
-	primary: (soft: neutral-20, accent: neutral-30),
-	cta: (soft: cta-20, accent: cta-60),
-	success: (soft: success-20, accent: success-60),
-	alert: (soft: alert-20, accent: alert-60),
-	warning: (soft: warning-20, accent: warning-60),
-	info: (soft: info-20, accent: info-60),
-	announcement: (soft: announcement-20, accent: announcement-60)
+	primary: (contrast: neutral-90, soft: neutral-20, accent: neutral-30),
+	cta: (contrast: cta-90, soft: cta-20, accent: cta-60),
+	success: (contrast: success-90, soft: success-20, accent: success-60),
+	alert: (contrast: alert-90, soft: alert-20, accent: alert-60),
+	warning: (contrast: warning-90, soft: warning-20, accent: warning-60),
+	info: (contrast: info-90, soft: info-20, accent: info-60),
+	announcement: (contrast: announcement-90, soft: announcement-20, accent: announcement-60),
+	pacific: ('': linear-gradient(to right, var(#{scheme-variables.$vvd-color-info-30}), var(#{scheme-variables.$vvd-color-cta-70}))),
 );
 
 // override to apply relevance
