--- a/components/badge/src/vwc-badge.scss
+++ b/components/badge/src/vwc-badge.scss
@@ -4,8 +4,10 @@ $namespace-shape: #{$namespace}-shape;
 
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
-	$connotations-set: primary cta success alert warning info
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+	$connotations-set: primary cta success alert warning info,
+	$shades: (soft, contrast),
+	$default: primary
 );
 
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
@@ -18,11 +20,7 @@ $namespace-shape: #{$namespace}-shape;
 
 $vvd-badge--block-size: --#{$namespace}--block-size;
 
-@include color-connotation.connotations-main-default(primary);
-@include color-connotation.connotations-main;
-
-@include color-connotation.connotations-shades-default(primary);
-@include color-connotation.connotations-shades;
+@include connotation.connotation;
 
 @include shape-mixins.shape(
 	$shapes: (
