--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -1,8 +1,11 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
-	$connotations-set: success alert warning info announcement
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+	$connotations-set: success alert warning info announcement,
+	$default: announcement
 );
+
+@include connotation.connotation;
 
 :host {
 	@include typography.typography-cat-shorthand('caption');
@@ -31,6 +34,9 @@
 	}
 }
 
+.vwc-note {
+	#{connotation.$vvd-color-connotation}: inherit;
+}
 // default flavor
 :host(:not([legacy])) {
 	.vivid-snackbar {
@@ -40,7 +46,7 @@
 		color: var(#{scheme-variables.$vvd-color-on-canvas});
 	}
 
-	.note {
+	.vwc-note {
 		flex: 1;
 		align-self: center;
 		padding: 16px;
@@ -48,7 +54,7 @@
 		box-shadow: none;
 	}
 	::part(icon) {
-		color: var(#{color-connotation.$vvd-color-connotation});
+		color: var(#{connotation.$vvd-color-connotation});
 	}
 
 	.actions-container {
