--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -4,8 +4,9 @@
 @use '@vonage/vwc-icon/src/partials/vwc-icon-variables' as icon-variables;
 @use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
-	$connotations-set: primary cta success alert info announcement
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+	$connotations-set: primary cta success alert info announcement,
+	$default: primary
 );
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with(
 	$variable-name: --vvd-button-shape
@@ -30,8 +31,8 @@
 @include layout-mixins.layout();
 @include layout-mixins.layout-default(ghost);
 
-@include color-connotation.connotations-main;
-@include color-connotation.connotations-main-default(primary);
+@include connotation.connotation;
+
 
 :host {
 	--mdc-button-disabled-ink-color: var(#{vvd-formfield.$formfield-disabled-ink});
@@ -46,17 +47,17 @@
 
 :host([raised]),
 :host([unelevated]) {
-	--mdc-ripple-color: var(#{button-variables.$vvd-button-layout}--text, var(#{color-connotation.$vvd-color-on-connotation}));
+	--mdc-ripple-color: var(#{button-variables.$vvd-button-layout}--text, var(#{connotation.$vvd-color-on-connotation}));
 }
 
 :host([unelevated]) {
-	--mdc-theme-primary: var(#{button-variables.$vvd-button-layout}--fill, var(#{color-connotation.$vvd-color-connotation}));
-	--mdc-theme-on-primary: var(#{button-variables.$vvd-button-layout}--text, var(#{color-connotation.$vvd-color-on-connotation}));
+	--mdc-theme-primary: var(#{button-variables.$vvd-button-layout}--fill, var(#{connotation.$vvd-color-connotation}));
+	--mdc-theme-on-primary: var(#{button-variables.$vvd-button-layout}--text, var(#{connotation.$vvd-color-on-connotation}));
 }
 
 :host([outlined]) {
-	--mdc-theme-primary: var(#{button-variables.$vvd-button-layout}--text, var(#{color-connotation.$vvd-color-on-connotation}));
-	--mdc-theme-on-primary: var(#{button-variables.$vvd-button-layout}--fill, var(#{color-connotation.$vvd-color-connotation}));
+	--mdc-theme-primary: var(#{button-variables.$vvd-button-layout}--text, var(#{connotation.$vvd-color-on-connotation}));
+	--mdc-theme-on-primary: var(#{button-variables.$vvd-button-layout}--fill, var(#{connotation.$vvd-color-connotation}));
 }
 /////////////////////////////////////////////////////////////////////////////
 .mdc-button {
