--- a/components/list/src/vwc-list-item.scss
+++ b/components/list/src/vwc-list-item.scss
@@ -2,8 +2,9 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
-	$connotations-set: primary cta
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+	$connotations-set: primary cta,
+	$default: primary
 );
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with (
 	$variable-name: --vvd-list-item-shape
@@ -14,8 +15,7 @@ $vvd-list-item-block-size: --vvd-list-item-block-size;
 $vvd-list-item-side-padding: --vvd-list-item-side-padding;
 $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 
-@include color-connotation.connotations-main;
-@include color-connotation.connotations-main-default(primary);
+@include connotation.connotation;
 
 @include shape-mixins.shape(
 	$shapes: (
@@ -50,16 +50,16 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 
 :host([activated]) {
 	--mdc-theme-text-icon-on-background: var(
-		#{color-connotation.$vvd-color-on-connotation}
+		#{connotation.$vvd-color-on-connotation}
 	);
 	--mdc-theme-text-hint-on-background: var(
-		#{color-connotation.$vvd-color-on-connotation}
+		#{connotation.$vvd-color-on-connotation}
 	);
-	--mdc-ripple-color: var(#{color-connotation.$vvd-color-on-connotation});
+	--mdc-ripple-color: var(#{connotation.$vvd-color-on-connotation});
 
 	@include typography.typography-cat-shorthand('body-2-bold');
 	z-index: 0;
-	color: var(#{color-connotation.$vvd-color-on-connotation});
+	color: var(#{connotation.$vvd-color-on-connotation});
 
 	mwc-ripple,
 	.fake-activated-ripple {
@@ -68,12 +68,12 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 
 	.fake-activated-ripple {
 		--mdc-ripple-activated-opacity: 1;
-		--mdc-ripple-color: var(#{color-connotation.$vvd-color-connotation});
+		--mdc-ripple-color: var(#{connotation.$vvd-color-connotation});
 	}
 
 	mwc-ripple {
 		--mdc-ripple-activated-opacity: 0;
-		background-color: var(#{color-connotation.$vvd-color-connotation});
+		background-color: var(#{connotation.$vvd-color-connotation});
 	}
 }
 
